--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -10,14 +10,13 @@
   /*border-bottom: 2px #154360 solid;*/
 }
 .navbar-hearder {
-	padding-bottom: 0; 
+	/*padding-bottom: 0; */
 }
 h1 { /* name */
   color: white;
   font-size: 1.5em;
   margin-top: -5px;  
 }
-
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
 }
@@ -61,13 +60,19 @@ h1 { /* name */
 	margin-top: 0;
 	margin-bottom: 20px;
 }
-#dish {
+.dishes {
 	background: #EBF5FB;
+	margin-bottom: 20px;
+	padding: 10px;
 }
-#dish h3{
+.dishes h3{
 	text-align: center;
 	margin-top: 10px;
 	margin-bottom: 20px;
+}
+.dishes a {
+	margin-left: auto;
+	margin-right: auto;
 }
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
