--- a/module2-solution/css/stylesheet.css
+++ b/module2-solution/css/stylesheet.css
@@ -1,7 +1,7 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: Verdana, Geneva, sans-serif; /*"Comic Sans MS", cursive, sans-serif;*/
 }
 h1 {
   margin-top: 30px;
