--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: Verdana, Geneva, sans-serif; /*"Comic Sans MS", cursive, sans-serif;*/
 }
 /** HEADER **/
 #header-nav {
